src/test/ui/issues/issue-3008-2.rs
enum foo { foo_(bar) }
struct bar { x: bar }
//~^ ERROR E0072

fn main() {
}
